[package]
name = "doc_consts"
version = "0.3.0"
edition = "2021"
description = "get doc comments on fields as runtime constants"
authors = ["MnlPhlp <online@philipp-manuel.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MnlPhlp/doc_consts"
repository = "https://github.com/MnlPhlp/doc_consts"
keywords = ["doc", "macro", "fields", "comment", "constants"]
categories = [
    "development-tools",
    "development-tools::procedural-macro-helpers",
]
readme = "README.md"

[workspace]
members = ["doc_consts_derive", "no_std_tests", "tests"]

[dependencies]
doc_consts_derive = { path = "./doc_consts_derive", version = "0.2.0" }

[features]
no_std = ["doc_consts_derive/no_std"]
